Fix Squares on Menu Presentationnal on Firefox

--- a/app/react/src/styles/common/form.less
+++ b/app/react/src/styles/common/form.less
@@ -49,17 +49,23 @@
       }
 
       .presentation-item {
-        flex: 0 0 45%;
-        justify-content: center;
+        
         background-color: #ffffff;
         border: @border-width-base @border-style-base @border-color-base;
         border-radius: @border-radius-sm @border-radius-sm;
-        display: flex;
-        display: -moz-flex;
-        display: -webkit-flex;
-        display: -ms-flex;
-        align-items: center;
+
+        position: relative;
+        flex-basis: calc(45%);
         .content {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          display: flex;
+          display: -webkit-flex;
+          justify-content: center;
+          align-items: center;
           .icon {
             font-size: 10em;
           }
